--- a/王亚楠.md
+++ b/王亚楠.md
@@ -1,58 +1,69 @@
-##717食品
-    路由:
-        1.将所有的路由封装在一个js文件中,创建路由,用authorization设置权限
-        2.封装一个路由组件,在里面完成配置
-    1.页面
-        首页
-            1.搜索页:点击文本框进入搜索页,在文本框中输入内容用正则验证,点击搜索将搜索的内容本地储存然后将内容返回到页面上用localStorage方法
-            2.轮播图:引入swiper方法将轮播图实现出来
-            3.分类列表页:代码如下:
-                    <dl>
-                         <dt><img src={require('../../static/img/a.png')}/></dt>
-                         <dd>家乡味道</dd>
-                     </dl>
-            4.详情页:用node创建接口方法如下:
-                引入express
-                const express = require('express')
-                const app = express()
-                设置跨域
-                app.all('*',function(req,res,next){
-                    res.header("Access-Control-Allow-Origin","http://localhost:3000") //跨域
-                    res.header('Access-Control-Allow-Headers',"Content-type,Token") //字段
-                    res.header("Content-Type","application/json;charset=utf-8") //响应限制放回json
-                    next()
-                })
-                在中间写接口
-                eg:app.get('/123',function(req,res){
-                    res.status(200),
-                    res.json(questions)
-                });
-                配置服务端口
-                app.listen(9000,function(){
-                    console.log('server listen 9000')
-                })
-                创建号node接口后用node中的方法获取真实的数据，然后再渲染页面,点击商品进入详情页(通过传参的方式),进入详情页后可以展示不同的商品
+##  717食品
 
-        分类页: 用map方式遍历点击不同的值,输出不同的数据
-        购物车: 
-            1.在首页点击购物车图标的时候会跳到详情页,可以用阻止事件冒泡的方法将它解决。
-            2.在点击购物车的判断是否登录,没有登录进入登录页,登录完成以后商品添加到购物车。
-            3.用store方法,将数据存储,进行加加减减的操作,再做全选的时候判断selected的是什么值,然后判断是否是全选
-            4.删除商品点击编辑按钮将编辑按钮变成完成，将结算按钮变删除,将选中商品通过id将数据存储到后台,然后根据后台传来的数据,将数据删除。
-        我的
-            退出登录的设置:
-                1.就是让cookie超时,退出登录
-            登录
-                1.登录用户名,密码,传给后台判断用户名,密码是否正确
-                2.在前端查找传来的信息,如果正确存在就继续，错误返回错误信息
-                3.后台根据用户名和密码生成密钥token(key,code)，把token传给前端
-            注册
-                1.注册用户名，密码，传给后台
-                2.后端将数据存到指定的数据库中
-                3.只返回一个成功的信息
-        邮寄地址管理
-            1.添加
-            2.邮寄地址列表
+###  1.路由:
+
+    1.将所有的路由封装在一个js文件中,创建路由,用authorization设置权限
+    2.封装一个路由组件,在里面完成配置
+
+###  2.页面
+
+####  首页
+
+    1.搜索页:点击文本框进入搜索页,在文本框中输入内容用正则验证,点击搜索将搜索的内容本地储存然后将内容返回到页面上用localStorage方法
+    2.轮播图:引入swiper方法将轮播图实现出来
+    3.分类列表页:代码如下:
+            <dl>
+                    <dt><img src={require('../../static/img/a.png')}/></dt>
+                    <dd>家乡味道</dd>
+                </dl>
+    4.详情页:用node创建接口方法如下:
+        引入express
+        const express = require('express')
+        const app = express()
+        设置跨域
+        app.all('*',function(req,res,next){
+            res.header("Access-Control-Allow-Origin","http://localhost:3000") //跨域
+            res.header('Access-Control-Allow-Headers',"Content-type,Token") //字段
+            res.header("Content-Type","application/json;charset=utf-8") //响应限制放回json
+            next()
+        })
+        在中间写接口
+        eg:app.get('/123',function(req,res){
+            res.status(200),
+            res.json(questions)
+        });
+        配置服务端口
+        app.listen(9000,function(){
+            console.log('server listen 9000')
+        })
+        创建号node接口后用node中的方法获取真实的数据，然后再渲染页面,点击商品进入详情页(通过传参的方式),进入详情页后可以展示不同的商品
+
+####  分类页: 
+    用map方式遍历点击不同的值,输出不同的数据
+
+####  购物车: 
+    1.在首页点击购物车图标的时候会跳到详情页,可以用阻止事件冒泡的方法将它解决。
+    2.在点击购物车的判断是否登录,没有登录进入登录页,登录完成以后商品添加到购物车。
+    3.用store方法,将数据存储,进行加加减减的操作,再做全选的时候判断selected的是什么值,然后判断是否是全选
+    4.删除商品点击编辑按钮将编辑按钮变成完成，将结算按钮变删除,将选中商品通过id将数据存储到后台,然后根据后台传来的数据,将数据删除。
+
+####  我的
+
+    退出登录的设置:
+        1.就是让cookie超时,退出登录
+    登录
+        1.登录用户名,密码,传给后台判断用户名,密码是否正确
+        2.在前端查找传来的信息,如果正确存在就继续，错误返回错误信息
+        3.后台根据用户名和密码生成密钥token(key,code)，把token传给前端
+    注册
+        1.注册用户名，密码，传给后台
+        2.后端将数据存到指定的数据库中
+        3.只返回一个成功的信息
+
+####  邮寄地址管理
+
+    1.添加
+    2.邮寄地址列表
 
 
 
